nimbus config and test script

--- a/Nimbus/pawsey_nimbus.config
+++ b/Nimbus/pawsey_nimbus.config
@@ -1,10 +1,10 @@
 // profile for Nimbus cloud at Pawsey
 
-params {
-    config_profile_description  = 'Pawsey Nimbus cloud profile'
-    config_profile_contact      = ' (@georgiesamaha)' 
-    config_profile_url          = 'https://support.pawsey.org.au/documentation/display/US/Nimbus+for+Bioinformatics'
-}
+//params {
+//    config_profile_description  = 'Pawsey Nimbus cloud profile'
+//    config_profile_contact      = ' (@georgiesamaha)' 
+//    config_profile_url          = 'https://support.pawsey.org.au/documentation/display/US/Nimbus+for+Bioinformatics'
+//}
 
 process {
     cache = 'lenient'
