set points of contact

--- a/Nimbus/pawsey_nimbus.config
+++ b/Nimbus/pawsey_nimbus.config
@@ -1,17 +1,17 @@
 // profile for Nimbus cloud at Pawsey
 
-//params {
-//    config_profile_description  = 'Pawsey Nimbus cloud profile'
-//    config_profile_contact      = ' (@georgiesamaha)' 
-//    config_profile_url          = 'https://support.pawsey.org.au/documentation/display/US/Nimbus+for+Bioinformatics'
-//}
+params {
+    config_profile_description  = 'Pawsey Nimbus cloud profile'
+    config_profile_contact      = ' (@marcodelapierre, @SarahBeecroft)'
+    config_profile_url          = 'https://support.pawsey.org.au/documentation/display/US/Nimbus+for+Bioinformatics'
+}
 
 process {
     cache = 'lenient'
 }
 
 profiles {
-  
+
 // To use singularity, use nextflow run -profile pawsey_nimbus,singularity
   singularity {
     singularity {
@@ -27,13 +27,13 @@ profiles {
     }}
 
   c2r8 {
-    params { 
+    params {
       max_cpus   = 2
       max_memory = '6.GB'
   }}
 
   c4r16 {
-    params { 
+    params {
       max_cpus   = 4
       max_memory = '14.GB'
   }}
