--- a/Nimbus/pawsey_nimbus.config
+++ b/Nimbus/pawsey_nimbus.config
@@ -2,7 +2,7 @@
 
 params {
     config_profile_description  = 'Pawsey Nimbus cloud profile'
-    config_profile_contact      = ' (@marcodelapierre, @SarahBeecroft)'
+    config_profile_contact      = '@marcodelapierre & @SarahBeecroft'
     config_profile_url          = 'https://support.pawsey.org.au/documentation/display/US/Nimbus+for+Bioinformatics'
 }
 
