add v1 config builder script

--- a/Gadi/gadi.config
+++ b/Gadi/gadi.config
@@ -6,26 +6,35 @@
 // TODO change queue for high mem
 // TODO Test adding trace reports for SU calculation 
 // TODO SU calculation afterScript to support benchmarking? 
-// TODO why is custom trace not being saved? 
 
 profiles {
     gadi {
     
-        // Define timestamp, to avoid overwriting existing trace 
+        // Profile config names for nf-core/configs
+        params {
+            config_profile_description = 'NCI Gadi HPC profile provided by nf-core/configs'
+            config_profile_contact = 'Georgie Samaha (@georgiesamaha)'
+            config_profile_url = 'https://opus.nci.org.au/display/Help/Gadi+User+Guide'
+        }
+
+        // Set environmental variables for Gadi
+        env { 
+            NXF_OPTS='-Xms4g -Xmx1g'
+        }
+
+        // Write custom trace file with outputs required for SU calculation
         def trace_timestamp = new java.util.Date().format('yyyy-MM-dd_HH-mm-ss')
         trace {
-            enabled = true 
-            file = "${params.outdir}/pipeline_info/gadi-resource-trace-${trace_timestamp}.txt"
+            enabled = true
+            overwrite = false 
+            file = "./gadi-resource-trace-${trace_timestamp}.txt"
             fields = 'name,status,exit,realtime,cpus,%cpu,memory,%mem,rss'
-        }   
+        } 
 
+        // Enable use of Singularity to run containers 
         singularity {
             enabled = true
             autoMounts = true
-        }
-        
-        params {
-            config_profile_description = 'NCI Gadi HPC profile'
         }
 
         process {
@@ -34,11 +43,9 @@ profiles {
             beforeScript = 'module load singularity nextflow'
 
             withLabel: process_low {
-                queue = 'normal'
-                time = '1h'
-                cpus = 2
-                memory = 6.GB
-
+                queue = { if (task.memory < 128.GB) {'normalbw'} else if (task.memory >= 128.GB && task.memory <= 190.GB) {'normal'}}
+                time = '24h'
+                memory = 10.GB
             }
             withLabel: process_medium {
                 queue = 'normal'
@@ -48,8 +55,6 @@ profiles {
             } 
             withLabel: process_high {
                 queue = 'normal'
-                time = '1h'
-                cpus = 2
                 memory = 6.GB
             }
         }
