Draft nci config and readme

--- a/Gadi/nci-gadi.config
+++ b/Gadi/nci-gadi.config
@@ -1,9 +1,5 @@
 // NCI Gadi nf-core configuration profile
 
-// TODO add a queue submission limit 
-// TODO add dynamic retry for each process label 
-// TODO add suitable resource limits to each process 
-// TODO change queue for high mem
 // TODO Test adding trace reports for SU calculation 
 // TODO SU calculation afterScript to support benchmarking? 
 
@@ -27,8 +23,8 @@ profiles {
         trace {
             enabled = true
             overwrite = false 
-            file = "./gadi-resource-trace-${trace_timestamp}.txt"
-            fields = 'name,status,exit,realtime,cpus,%cpu,memory,%mem,rss'
+            file = "./gadi-nf-core-trace-${trace_timestamp}.txt"
+            fields = 'name,status,exit,duration,realtime,cpus,%cpu,memory,%mem,rss'
         } 
 
         // Enable use of Singularity to run containers 
@@ -37,26 +33,19 @@ profiles {
             autoMounts = true
         }
 
+        // Submit up to 1000 concurrent jobs (Gadi max) at 15 sec intervals to avoid spamming the cluster
+        executor {
+            queueSize = 1000
+            pollInterval = '15 sec'
+        }
+
+        // Define process resource limits 
         process {
             executor = 'pbspro'
-            clusterOptions = '-P er01'
+            project = "$PROJECT"
+            storage = "scratch/$PROJECT"
+            queue = { task.memory < 128.GB ? 'normalbw' : (task.memory >= 128.GB && task.memory <= 190.GB ? 'normal' : (task.memory > 190.GB && task.memory <= 1020.GB ? 'hugemembw' : '')) }
             beforeScript = 'module load singularity nextflow'
-
-            withLabel: process_low {
-                queue = { if (task.memory < 128.GB) {'normalbw'} else if (task.memory >= 128.GB && task.memory <= 190.GB) {'normal'}}
-                time = '24h'
-                memory = 10.GB
-            }
-            withLabel: process_medium {
-                queue = 'normal'
-                time = '1h'
-                cpus = 2
-                memory = 6.GB
-            } 
-            withLabel: process_high {
-                queue = 'normal'
-                memory = 6.GB
-            }
         }
     }
 }
