Drafted gadi config

--- a/Gadi/nci-gadi.config
+++ b/Gadi/nci-gadi.config
@@ -1,21 +1,33 @@
 // NCI Gadi nf-core configuration profile
-
-// TODO Test adding trace reports for SU calculation 
-// TODO SU calculation afterScript to support benchmarking? 
+params {
+    config_profile_description = 'NCI Gadi HPC profile provided by nf-core/configs'
+    config_profile_contact = 'Georgie Samaha (@georgiesamaha)'
+    config_profile_url = 'https://opus.nci.org.au/display/Help/Gadi+User+Guide'
+}
 
 profiles {
-    gadi {
-    
-        // Profile config names for nf-core/configs
-        params {
-            config_profile_description = 'NCI Gadi HPC profile provided by nf-core/configs'
-            config_profile_contact = 'Georgie Samaha (@georgiesamaha)'
-            config_profile_url = 'https://opus.nci.org.au/display/Help/Gadi+User+Guide'
+    nci_gadi {
+        // Enable use of Singularity to run containers 
+        singularity {
+            enabled = true
+            autoMounts = true
         }
 
-        // Set environmental variables for Gadi
-        env { 
-            NXF_OPTS='-Xms4g -Xmx1g'
+        // Submit up to 1000 concurrent jobs (Gadi max)
+        executor {
+            queueSize = 1000
+        }
+
+        // Define process resource limits 
+        process {
+            executor = 'pbspro'
+            project = "$PROJECT"
+            storage = "scratch/$PROJECT"
+            module = 'singularity'
+            cache = 'lenient'
+            stageInMode = 'symlink'
+            queue = { task.memory < 128.GB ? 'normalbw' : (task.memory >= 128.GB && task.memory <= 190.GB ? 'normal' : (task.memory > 190.GB && task.memory <= 1020.GB ? 'hugemembw' : '')) }
+            beforeScript = 'module load singularity nextflow'
         }
 
         // Write custom trace file with outputs required for SU calculation
@@ -25,27 +37,6 @@ profiles {
             overwrite = false 
             file = "./gadi-nf-core-trace-${trace_timestamp}.txt"
             fields = 'name,status,exit,duration,realtime,cpus,%cpu,memory,%mem,rss'
-        } 
-
-        // Enable use of Singularity to run containers 
-        singularity {
-            enabled = true
-            autoMounts = true
-        }
-
-        // Submit up to 1000 concurrent jobs (Gadi max) at 15 sec intervals to avoid spamming the cluster
-        executor {
-            queueSize = 1000
-            pollInterval = '15 sec'
-        }
-
-        // Define process resource limits 
-        process {
-            executor = 'pbspro'
-            project = "$PROJECT"
-            storage = "scratch/$PROJECT"
-            queue = { task.memory < 128.GB ? 'normalbw' : (task.memory >= 128.GB && task.memory <= 190.GB ? 'normal' : (task.memory > 190.GB && task.memory <= 1020.GB ? 'hugemembw' : '')) }
-            beforeScript = 'module load singularity nextflow'
         }
     }
 }
