Add MD to contacts

--- a/Gadi/nci-gadi.config
+++ b/Gadi/nci-gadi.config
@@ -1,7 +1,7 @@
 // NCI Gadi nf-core configuration profile
 params {
     config_profile_description = 'NCI Gadi HPC profile provided by nf-core/configs'
-    config_profile_contact = 'Georgie Samaha (@georgiesamaha)'
+    config_profile_contact = 'Georgie Samaha (@georgiesamaha), Matthew Downton (@mattdton)'
     config_profile_url = 'https://opus.nci.org.au/display/Help/Gadi+User+Guide'
 }
 
